--- a/coding_exercise_assignment.ipynb
+++ b/coding_exercise_assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMKnkOFjTQSfaosLzS303ep",
+      "authorship_tag": "ABX9TyMnY3cO8DzAuGS6cXSvtqCg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -104,92 +104,174 @@
       "source": [
         "#Part 2\n",
         "import pandas as pd\n",
+        "import numpy as np\n",
+        "\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.linear_model import LogisticRegression\n",
         "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
         "from sklearn.compose import ColumnTransformer\n",
         "from sklearn.pipeline import Pipeline\n",
-        "from sklearn.metrics import classification_report, confusion_matrix, roc_auc_score\n",
+        "from sklearn.metrics import accuracy_score, roc_auc_score, classification_report, confusion_matrix\n",
         "\n",
-        "# Load CSV. Acquired from Kaggle. source: https://www.kaggle.com/datasets/blastchar/telco-customer-churn/data\n",
-        "df = pd.read_csv('WA_Fn-UseC_-Telco-Customer-Churn.csv')\n",
+        "# Load Telco churn dataset\n",
+        "df = pd.read_csv(\"WA_Fn-UseC_-Telco-Customer-Churn.csv\")\n",
         "\n",
-        "# Data preprocessing\n",
-        "df['TotalCharges'] = pd.to_numeric(df['TotalCharges'], errors='coerce')\n",
-        "df = df.dropna()\n",
+        "# --- Cleaning ---\n",
+        "# TotalCharges sometimes has blanks -> coerce to numeric (blanks become NaN)\n",
+        "df[\"TotalCharges\"] = pd.to_numeric(df[\"TotalCharges\"], errors=\"coerce\")\n",
         "\n",
-        "# Convert target to binary\n",
-        "df['Churn'] = df['Churn'].map({'Yes': 1, 'No': 0})\n",
+        "# Drop identifier\n",
+        "if \"customerID\" in df.columns:\n",
+        "    df = df.drop(columns=[\"customerID\"])\n",
         "\n",
-        "# Select relevant features\n",
-        "numerical_features = ['tenure', 'MonthlyCharges', 'TotalCharges']\n",
-        "categorical_features = ['gender', 'Partner', 'Dependents', 'InternetService',\n",
-        "                        'Contract', 'PaymentMethod']\n",
+        "# Target: Churn Yes/No -> 1/0\n",
+        "df[\"Churn\"] = (df[\"Churn\"].astype(str).str.strip().str.lower() == \"yes\").astype(int)\n",
         "\n",
-        "X = df[numerical_features + categorical_features]\n",
-        "y = df['Churn']\n",
+        "# Columns\n",
+        "num_cols = df.select_dtypes(include=[np.number]).columns.tolist()\n",
+        "num_cols = [c for c in num_cols if c != \"Churn\"]\n",
+        "cat_cols = [c for c in df.columns if c not in num_cols + [\"Churn\"]]\n",
         "\n",
-        "# Preprocessing pipeline\n",
+        "# --- Simple imputation ---\n",
+        "for c in num_cols:\n",
+        "    df[c] = df[c].fillna(df[c].median())\n",
+        "\n",
+        "for c in cat_cols:\n",
+        "    mode_val = df[c].mode(dropna=True)\n",
+        "    df[c] = df[c].fillna(mode_val.iloc[0] if not mode_val.empty else \"Unknown\")\n",
+        "\n",
+        "# Features/target\n",
+        "X = df.drop(columns=[\"Churn\"])\n",
+        "y = df[\"Churn\"]\n",
+        "\n",
+        "# --- Preprocessing + model pipeline ---\n",
         "preprocessor = ColumnTransformer(\n",
         "    transformers=[\n",
-        "        ('num', StandardScaler(), numerical_features),\n",
-        "        ('cat', OneHotEncoder(drop='first', sparse_output=False), categorical_features)\n",
-        "    ])\n",
+        "        (\"num\", StandardScaler(), num_cols),\n",
+        "        (\"cat\", OneHotEncoder(handle_unknown=\"ignore\"), cat_cols),\n",
+        "    ]\n",
+        ")\n",
         "\n",
-        "# Create and train model\n",
-        "model = Pipeline(steps=[\n",
-        "    ('preprocessor', preprocessor),\n",
-        "    ('classifier', LogisticRegression(random_state=42, max_iter=1000))\n",
-        "])\n",
+        "model = Pipeline(\n",
+        "    steps=[\n",
+        "        (\"preprocessor\", preprocessor),\n",
+        "        (\"classifier\", LogisticRegression(max_iter=2000, random_state=42)),\n",
+        "    ]\n",
+        ")\n",
         "\n",
-        "# Split and train\n",
+        "# --- Train/test split ---\n",
         "X_train, X_test, y_train, y_test = train_test_split(\n",
         "    X, y, test_size=0.2, random_state=42, stratify=y\n",
         ")\n",
         "\n",
+        "# --- Train ---\n",
         "model.fit(X_train, y_train)\n",
         "\n",
-        "# Evaluate\n",
-        "y_pred = model.predict(X_test)\n",
-        "y_pred_proba = model.predict_proba(X_test)[:, 1]\n",
+        "# --- Evaluate ---\n",
+        "proba = model.predict_proba(X_test)[:, 1]\n",
+        "pred = (proba >= 0.5).astype(int)\n",
         "\n",
-        "print(\"Model Performance:\")\n",
-        "print(f\"ROC-AUC Score: {roc_auc_score(y_test, y_pred_proba):.3f}\")\n",
-        "print(\"\\nClassification Report:\")\n",
-        "print(classification_report(y_test, y_pred))\n",
-        "print(\"\\nConfusion Matrix:\")\n",
-        "print(confusion_matrix(y_test, y_pred))"
+        "acc = accuracy_score(y_test, pred)\n",
+        "auc = roc_auc_score(y_test, proba)\n",
+        "cm = confusion_matrix(y_test, pred)\n",
+        "report = classification_report(y_test, pred, digits=3)\n",
+        "\n",
+        "print(f\"Accuracy: {acc:.3f}\")\n",
+        "print(f\"ROC AUC:  {auc:.3f}\")\n",
+        "print(\"Confusion matrix [[TN, FP],[FN, TP]]:\")\n",
+        "print(cm)\n",
+        "print(\"\\nClassification report:\")\n",
+        "print(report)\n",
+        "\n",
+        "# --- Predict for a new customer (example: \"typical\" customer) ---\n",
+        "example = {}\n",
+        "for c in num_cols:\n",
+        "    example[c] = float(df[c].median())\n",
+        "for c in cat_cols:\n",
+        "    mode_val = df[c].mode(dropna=True)\n",
+        "    example[c] = mode_val.iloc[0] if not mode_val.empty else \"Unknown\"\n",
+        "\n",
+        "new_customer = pd.DataFrame([example])\n",
+        "\n",
+        "churn_probability = float(model.predict_proba(new_customer)[0, 1])\n",
+        "churn_prediction = int(churn_probability >= 0.5)\n",
+        "\n",
+        "print(\"\\nNew customer (example) churn probability:\", round(churn_probability, 3))\n",
+        "print(\"New customer churn prediction (1=churn, 0=no churn):\", churn_prediction)\n",
+        "\n",
+        "# --- Coefficients with feature names ---\n",
+        "ohe = model.named_steps[\"preprocessor\"].named_transformers_[\"cat\"]\n",
+        "cat_feature_names = ohe.get_feature_names_out(cat_cols).tolist()\n",
+        "feature_names = num_cols + cat_feature_names\n",
+        "\n",
+        "coefficients = model.named_steps[\"classifier\"].coef_[0]\n",
+        "coef_df = pd.DataFrame({\"feature\": feature_names, \"coef\": coefficients})\n",
+        "coef_df[\"abs_coef\"] = coef_df[\"coef\"].abs()\n",
+        "\n",
+        "print(\"\\nTop 10 positive coefficients (more churn):\")\n",
+        "print(coef_df.sort_values(\"coef\", ascending=False).head(10)[[\"feature\", \"coef\"]])\n",
+        "\n",
+        "print(\"\\nTop 10 negative coefficients (less churn):\")\n",
+        "print(coef_df.sort_values(\"coef\", ascending=True).head(10)[[\"feature\", \"coef\"]])\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "yNxW4j084366",
-        "outputId": "d0c6a319-7d0e-409c-9819-8c915ae4d1f0"
+        "outputId": "96362db6-f0ca-4f6f-c02a-9017a4843493"
       },
-      "execution_count": 13,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Model Performance:\n",
-            "ROC-AUC Score: 0.830\n",
+            "Accuracy: 0.806\n",
+            "ROC AUC:  0.842\n",
+            "Confusion matrix [[TN, FP],[FN, TP]]:\n",
+            "[[926 109]\n",
+            " [165 209]]\n",
             "\n",
-            "Classification Report:\n",
+            "Classification report:\n",
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.85      0.89      0.87      1033\n",
-            "           1       0.65      0.56      0.60       374\n",
+            "           0      0.849     0.895     0.871      1035\n",
+            "           1      0.657     0.559     0.604       374\n",
             "\n",
-            "    accuracy                           0.80      1407\n",
-            "   macro avg       0.75      0.72      0.73      1407\n",
-            "weighted avg       0.79      0.80      0.80      1407\n",
+            "    accuracy                          0.806      1409\n",
+            "   macro avg      0.753     0.727     0.738      1409\n",
+            "weighted avg      0.798     0.806     0.800      1409\n",
             "\n",
             "\n",
-            "Confusion Matrix:\n",
-            "[[921 112]\n",
-            " [166 208]]\n"
+            "New customer (example) churn probability: 0.439\n",
+            "New customer churn prediction (1=churn, 0=no churn): 0\n",
+            "\n",
+            "Top 10 positive coefficients (more churn):\n",
+            "                           feature      coef\n",
+            "16     InternetService_Fiber optic  0.640185\n",
+            "36         Contract_Month-to-month  0.579853\n",
+            "3                     TotalCharges  0.516280\n",
+            "35             StreamingMovies_Yes  0.204145\n",
+            "32                 StreamingTV_Yes  0.203591\n",
+            "43  PaymentMethod_Electronic check  0.198382\n",
+            "18               OnlineSecurity_No  0.156831\n",
+            "27                  TechSupport_No  0.132073\n",
+            "14               MultipleLines_Yes  0.106086\n",
+            "0                    SeniorCitizen  0.054149\n",
+            "\n",
+            "Top 10 negative coefficients (less churn):\n",
+            "                                 feature      coef\n",
+            "1                                 tenure -1.241015\n",
+            "38                     Contract_Two year -0.773004\n",
+            "15                   InternetService_DSL -0.652640\n",
+            "2                         MonthlyCharges -0.596379\n",
+            "39                   PaperlessBilling_No -0.343088\n",
+            "22      OnlineBackup_No internet service -0.301064\n",
+            "25  DeviceProtection_No internet service -0.301064\n",
+            "28       TechSupport_No internet service -0.301064\n",
+            "31       StreamingTV_No internet service -0.301064\n",
+            "34   StreamingMovies_No internet service -0.301064\n"
           ]
         }
       ]
@@ -269,7 +351,7 @@
         "id": "OeZVUvj_Ukj3",
         "outputId": "6ec1f917-0491-4142-9411-9f899fa66da4"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
