--- a/Prompt_Engineering.ipynb
+++ b/Prompt_Engineering.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM3fUtUE0UIIG1BNUS0Cvvo",
+      "authorship_tag": "ABX9TyM9gkg1EA152F9PQVA9ekgK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -470,7 +470,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Prompt #2 Code Generation with ReACT Prompting : Imagine you are a IT role in a company, your boss wants you to create a simple chatbot that could simulate to log sick leaves for every week. The employee can communicate with bot to schedule for sick leave. It should be simple and can do a small simulation in google colab. The code needs to *be* executable and in python\n"
+        "Prompt #2 Code Generation with ReACT Prompting with CHATGPT: Imagine you are a IT role in a company, your boss wants you to create a simple chatbot that could simulate to log sick leaves for every week. The employee can communicate with bot to schedule for sick leave. It should be simple and can do a small simulation in google colab. The code needs to *be* executable and in python\n"
       ],
       "metadata": {
         "id": "W_WtSuK1yARr"
