--- a/Prompt_Engineering.ipynb
+++ b/Prompt_Engineering.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM9gkg1EA152F9PQVA9ekgK",
+      "authorship_tag": "ABX9TyMbKZHEbuk1loVhIxk9DWB+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,9 +27,18 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "A36jqbxqlu6h"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "Prompt #1 I used in CHATGPT: can you help me build a simple clothing store customer service chatbot in python, it should have basic store hours, emails, shipping and return function. It should run smoothly.\n",
+        "Prompt #1 I used in CHATGPT: Create a Python terminal/Colab chatbot for a clothing store using rule-based intents. It must support hours, contact, shipping, returns, exchanges, sizing, availability, and order tracking from a mock dict. Include session memory (name, last order) and a simple state machine so returns/exchanges/tracking work across multiple messages (user can paste just the order ID in the next turn).\n",
         "\n",
         "\n"
       ],
